--- a/views/techStack.ejs
+++ b/views/techStack.ejs
@@ -39,7 +39,7 @@
                   </blockquote>
 
                   <blockquote class="mainLines">
-                  Last but not the least, thanks to <a href="https://pradeepanbagally.github.io/" target="_blank">Pradeepa</a> for designing the logo
+                  Last but not the least, power full content management system <a href="https://www.drupal.org/" target="_blank">Drupal</a> for designing the logo
                   </blockquote>
 
                     </div>
