--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,16 +19,23 @@
                     <div class="col-lg-12">
 
                       <p align="center" class="headingFont">
-                        Leave the marks !!!
+                        Leave the comments !!!
                       </p>
                       <br/>
 
+                   <blockquote class="mainLines strong">
+                    The digital experiences you love. The organizations you trust most. The software they depend on.
+                   </blockquote>
                    <blockquote class="mainLines">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    Make something amazing, for anyone.
                   </blockquote>
 
                   <blockquote class="mainLines">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br/><br/> Every second creates a comments
+                    Drupal is content management software. It's used to make many of the websites and applications you use every day. Drupal has great standard features, like easy content authoring, reliable performance, and excellent security. But what sets it apart is its flexibility; modularity is one of its core principles. Its tools help you build the versatile, structured content that dynamic web experiences need.
+
+It's also a great choice for creating integrated digital frameworks. You can extend it with any one, or many, of thousands of add-ons. Modules expand Drupal's functionality. Themes let you customize your content's presentation. Distributions are packaged Drupal bundles you can use as starter-kits. Mix and match these components to enhance Drupal's core abilities. Or, integrate Drupal with external services and other applications in your infrastructure. No other content management software is this powerful and scalable.
+
+
                     and we share the best comments with you.<br/> Read the comments <a href="/comments">here</a> or <a href="/new-comment">write your own comments</a>
                   </blockquote>
 
